--- a/Lession15/bai1/index.html
+++ b/Lession15/bai1/index.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <h1>#todo</h1>
-      <div class="tabs">
-        <div class="tab active" data-tab="all">All</div>
-        <div class="tab" data-tab="active">Active</div>
-        <div class="tab" data-tab="completed">Completed</div>
+      <div class="tabs" style="display: flex">
+        <div class="tab active" id="all">All</div>
+        <div class="tab" id="active">Active</div>
+        <div class="tab" id="completed">Completed</div>
       </div>
-      <div class="input-container">
-        <input type="text" placeholder="add details" id="todo-input" />
-        <button id="add-todo">Add</button>
+      <div class="mb-3 mt-5" style="display: flex">
+        <input
+          type="text"
+          class="form-control"
+          id="keyword"
+          placeholder="add details"
+        />
+        <button
+          id="add"
+          type="button"
+          class="btn btn-primary"
+          style="margin-left: 8px"
+        >
+          Add
+        </button>
       </div>
       <ul class="todo-list" id="todo-list"></ul>
-      <button id="clear-todos">Clear All</button>
     </div>
-    <script src="./script.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
