--- a/Lession15/bai3/index.html
+++ b/Lession15/bai3/index.html
@@ -3,104 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo List</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        background-color: #f5f5f5;
-        margin: 0;
-      }
-      .container {
-        background: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 400px;
-      }
-      h1 {
-        text-align: center;
-        font-size: 24px;
-        color: #333;
-      }
-      .tabs {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-      }
-      .tabs div {
-        padding: 10px;
-        cursor: pointer;
-      }
-      .tabs div.active {
-        border-bottom: 2px solid #007bff;
-      }
-      .input-container {
-        display: flex;
-        margin-bottom: 20px;
-      }
-      .input-container input {
-        flex: 1;
-        padding: 10px;
-        border: 1px solid #ddd;
-        border-radius: 5px;
-        margin-right: 10px;
-      }
-      .input-container button {
-        padding: 10px;
-        border: none;
-        background: #007bff;
-        color: white;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      .todo-list {
-        list-style: none;
-        padding: 0;
-      }
-      .todo-list li {
-        display: flex;
-        align-items: center;
-        padding: 10px;
-        border-bottom: 1px solid #ddd;
-      }
-      .todo-list li:last-child {
-        border-bottom: none;
-      }
-      .todo-list input[type="checkbox"] {
-        margin-right: 10px;
-      }
-    </style>
+    <title>Bai test cuoi modun</title>
+    <script src="./users.js"></script>
+    <script src="./posts.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h1>#todo</h1>
-      <div class="tabs">
-        <div class="tab active">All</div>
-        <div class="tab">Active</div>
-        <div class="tab">Completed</div>
-      </div>
-      <div class="input-container">
-        <input type="text" placeholder="add details" />
-        <button>Add</button>
-      </div>
-      <ul class="todo-list">
-        <li>
-          <input type="checkbox" />
-          Do coding challenges
-        </li>
-        <li>
-          <input type="checkbox" />
-          Do coding challenges
-        </li>
-        <li>
-          <input type="checkbox" checked />
-          Do coding challenges
-        </li>
-      </ul>
-    </div>
+    <h2>1. Đăng nhập</h2>
+    <input type="text" id="loginEmail" placeholder="Email" /><br />
+    <input type="password" id="loginPassword" placeholder="Password" /><br />
+    <button onclick="login()">Đăng nhập</button>
+
+    <h2>2. Đăng ký</h2>
+    <input type="text" id="registerFirstName" placeholder="First Name" /><br />
+    <input type="text" id="registerLastName" placeholder="Last Name" /><br />
+    <input type="text" id="registerEmail" placeholder="Email" /><br />
+    <input type="password" id="registerPassword" placeholder="Password" /><br />
+    <button onclick="register()">Đăng ký</button>
+
+    <h2>3. Xem danh sách users</h2>
+    <input type="text" id="listUsersKeyword" placeholder="Keyword" /><br />
+    <button onclick="listUsers()">Xem danh sách users</button>
+
+    <h2>4. Xem danh sách posts</h2>
+    <button onclick="listPosts()">Xem danh sách posts</button>
+
+    <h2>5. Xem chi tiết post</h2>
+    <input type="number" id="viewPostId" placeholder="Post ID" /><br />
+    <button onclick="viewPost()">Xem chi tiết post</button>
+
+    <h2>6. Tìm kiếm post theo user</h2>
+    <input type="text" id="searchPostsEmail" placeholder="User Email" /><br />
+    <button onclick="searchPostsByUser()">Tìm kiếm post</button>
+    <script src="./scripts.js"></script>
   </body>
 </html>
